care/force-app/main/default/objects/Privacy_Audit_Log__c/Privacy_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Privacy Audit Log</label>
    <nameField>
        <displayFormat>PAL-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Audit Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>