care/force-app/main/default/objects/Privacy_Audit_Log__c/fields/CSR_Email__c.field-meta.xml
<CustomField>
    <fullName>CSR_Email__c</fullName>
    <inlineHelpText>The email address of the CSR Rep who submitted the CSR Web Form.</inlineHelpText>
    <label>CSR Email</label>
    <type>Email</type>
</CustomField>