care/force-app/main/default/objects/Privacy_Audit_Log__c/fields/Fail_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Decline_Reason__c</fullName>
    <label>Fail/Decline Reason</label>
    <type>TextArea</type>
</CustomField>