care/force-app/main/default/objects/Privacy_Audit_Log__c/fields/PR_Name__c.field-meta.xml
<CustomField>
    <fullName>PR_Name__c</fullName>
    <externalId>true</externalId>
    <label>PR Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>