care/force-app/main/default/objects/Privacy_Audit_Log__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <label>Requestor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>