care/force-app/main/default/objects/Privacy_Audit_Log__c/fields/Requestor_Relationship_to_Member__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Relationship_to_Member__c</fullName>
    <label>Requestor Relationship to Member</label>
    <type>TextArea</type>
</CustomField>