care/force-app/main/default/objects/Privacy_Audit_Log__c/fields/Universal_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Universal_Member_Id__c</fullName>
    <description>The Member Id of the User.  This field is intended to handle member ids from the US &amp; International Platforms.</description>
    <label>Universal Member Id</label>
    <length>23</length>
    <type>Text</type>
</CustomField>