care/force-app/main/default/objects/Privacy_Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Fulfillment_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Fail_Decline_Reason__c</columns>
    <columns>Source_System__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>Intl Platform</value>
    </filters>
    <label>All</label>
</ListView>