care/force-app/main/default/objects/Privacy_Audit_Log__c/listViews/Delete_Requested.listView-meta.xml
<ListView>
    <fullName>Delete_Requested</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Fulfillment_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Fail_Decline_Reason__c</columns>
    <columns>Source_System__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Delete Data</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Delete - Requested</label>
</ListView>